WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
96337
[chromium] Fix trace event macro naming issue
https://bugs.webkit.org/show_bug.cgi?id=96337
Summary
[chromium] Fix trace event macro naming issue
John Bates
Reported
2012-09-10 16:47:14 PDT
[chromium] Fix trace event macro naming issue
Attachments
Patch
(2.31 KB, patch)
2012-09-10 16:47 PDT
,
John Bates
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
John Bates
Comment 1
2012-09-10 16:47:43 PDT
Created
attachment 163245
[details]
Patch
John Bates
Comment 2
2012-09-10 16:48:26 PDT
ptal
WebKit Review Bot
Comment 3
2012-09-10 18:19:08 PDT
Comment on
attachment 163245
[details]
Patch Clearing flags on attachment: 163245 Committed
r128137
: <
http://trac.webkit.org/changeset/128137
>
WebKit Review Bot
Comment 4
2012-09-10 18:19:11 PDT
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug