[chromium] Fix trace event macro naming issue https://bugs.webkit.org/show_bug.cgi?id=96337

Patch by John Bates <jbates@google.com> on 2012-09-10
Reviewed by James Robinson.

* platform/chromium/TraceEvent.h:

Canonical link: https://commits.webkit.org/114230@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@128137 268f45cc-cd09-0410-ab3c-d52691b4dbfc